[package]
name = "purple_exporter"
version = "0.2.0"
authors = ["Wayne Manselle <wayne@viridianforge.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.8"
json = "0.12.4"
log = { version = "0.4" }
prometheus_exporter = "0.8"
reqwest = { version = "0.10", features = ["blocking"]}
url = "2.2.1"